Closed
Bug 201084
Opened 22 years ago
Closed 22 years ago
[AxPlugin] mozilla crashing in new ActiveXObject()
Categories
(Core Graveyard :: Embedding: ActiveX Wrapper, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.4beta
People
(Reporter: ashshbhatt, Assigned: dbradley)
References
Details
Attachments
(2 files)
|
5.55 KB,
text/plain
|
Details | |
|
1.17 KB,
patch
|
adamlock
:
review+
alecf
:
superreview+
|
Details | Diff | Splinter Review |
mozilla crashes in new ActiveXObject() method.
| Reporter | ||
Comment 1•22 years ago
|
||
Testcase :
<html>
<head>
</head>
<body>
<script language="javascript">
mPlayer = new ActiveXObject('WMPlayer.OCX.7');
</script >
</body>
</html>
| Reporter | ||
Comment 2•22 years ago
|
||
| Assignee | ||
Comment 3•22 years ago
|
||
This is crashing because of the use of new. When I tested the security code, I
used ActiveXObject without new, but didn't realize that "new ActiveXObject"
would pass in a different object.
Status: NEW → ASSIGNED
| Assignee | ||
Comment 4•22 years ago
|
||
This uses the global object for the security check and the scope object. This
allows both forms to work properly.
| Assignee | ||
Updated•22 years ago
|
Attachment #119823 -
Flags: superreview?(alecf)
Attachment #119823 -
Flags: review?(adamlock)
Comment on attachment 119823 [details] [diff] [review]
Use the global object
r=adamlock
Attachment #119823 -
Flags: review?(adamlock) → review+
Comment 7•22 years ago
|
||
Comment on attachment 119823 [details] [diff] [review]
Use the global object
sr=alecf
Attachment #119823 -
Flags: superreview?(alecf) → superreview+
| Assignee | ||
Comment 8•22 years ago
|
||
Fix checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•