Bug 201084 - [AxPlugin] mozilla crashing in  new ActiveXObject(). r=adamlock, sr=alecf (Not part of build)